--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@vue/composition-api": "^1.0.5",
+    "axios": "^0.23.0",
     "html-loader": "^2.1.2",
     "lodash": "^4.17.21",
     "vue": "^2.6.14",
